--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -5,14 +5,14 @@
   <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
 
     <div class="pr-10">
-      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-r from-blue-200 to-transparent shadow-md">  
+      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-r from-blue-300 via-indigo-300 to-transparent eli-form-box-shadow">  
         <%= form_with scope: :category, model: @category, local: true do |f| %>
 
           <div class="font-bold text-gray-800 text-4xl">
             New Agenda
           </div>
           
-          <div class="flex flex-col space-y-5 mt-5 text-black">
+          <div class="flex flex-col space-y-3 mt-5 text-black">
             <%= f.text_field :title, placeholder: " Agenda Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md py-2 outline-none", style:"background: rgba(250,250,250,.4)" %>
             <%= f.text_area :description, size: "40x10", placeholder: " Agenda Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none", style:"background: rgba(250,250,250,.4)" %>
           </div>
