--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,18 @@
 <%= render "shared/nav" %>
 
-<div class="max-w-3xl flex flex-col justify-center text-center mx-auto mt-8 rounded bg-gradient-to-r from-blue-400 to-transparent shadow-md relative">  
+<div class="max-w-3xl flex flex-col justify-center text-center mx-auto mt-8 rounded bg-gradient-to-r from-blue-400 to-transparent relative eli-form-box-shadow">
   <div class="flex flex-col items-center">
 
-    <div class="absolute top-4 right-6 bg-yellow-300 hover:bg-yellow-500 text-gray-900 font-medium py-2 px-3 rounded">
-      <div class="flex justify-between items-center">
-        <%= image_tag("png/plus.png", class:"w-3 h-3")%>
-        <%= link_to "Add task", new_category_task_path(@category), class:"pl-2" %>
+    <%= link_to new_category_task_path(@category) do %>
+      <div class="absolute top-4 right-6 bg-yellow-300 hover:bg-yellow-400 font-medium py-2 px-3 rounded">
+
+        <div class="flex justify-between items-center">
+          <%= image_tag("png/plus.png", class:"w-3 h-3")%>
+          <p class="pl-2">Add Task</p>
+        </div>
+
       </div>
-    </div>
+    <% end %>
 
     <h1 class="text-5xl text-gray-100 font-bold mt-16"><%= @category.title %></h1>
     <em class="text-2xl font-light mb-10"> <%= truncate(strip_tags(@category.description.to_s), length: 60) %>
