--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,20 +1,31 @@
 <%= render "shared/nav" %>
 
-<div class="flex justify-evenly text-black">
-  <%= image_tag("checklist-animate.svg",  class:"w-1/3") %>
+<div class="flex justify-evenly">
 
-  <div>
-    <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
+  <%= image_tag("checklist-animate (1).svg", class:"w-1/3") %>
 
-      <div class="flex flex-col space-y-5 mt-16">
-        <%= f.text_field :title, placeholder: "Task Title", class: "w-full placeholder-gray-700 focus:placeholder-gray-400 rounded-md w-full py-2"%>
-        <%= f.text_area :description, size: "40x10", placeholder: " Task Description", class: "placeholder-gray-700 focus:placeholder-gray-400 rounded-md"%>
-        <%= f.date_field :deadline, class: "rounded"%>
+    <div class="pr-10">
+      <div class="max-w-3xl text-center mt-8 p-5 rounded bg-gradient-to-r from-blue-300 via-indigo-300 to-transparent eli-form-box-shadow">  
+        <%= form_with scope: :task, model: [@category, @task], local: true do |f| %>
+
+          <div class="font-bold text-gray-800 text-4xl">
+            New Task
+          </div>
+          
+          <div class="flex flex-col space-y-3 mt-5 text-black">
+            <%= f.text_field :title, placeholder: " Task Title", class: "w-full placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md py-2 outline-none", style:"background: rgba(250,250,250,.4)" %>
+            <%= f.text_area :description, size: "40x10", placeholder: " Task Description", class: "placeholder-gray-700 shadow-md focus:placeholder-gray-400 rounded-md outline-none", style:"background: rgba(250,250,250,.4)" %>
+            <%= f.date_field :deadline, class: "rounded", style:"background: rgba(250,250,250,.4)" %>
+          </div>
+
+          <%= f.submit 'Create Task', class:"flex justify-end bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer text-black mt-5" %>
+        
+        <% end %>
       </div>
-      <%= f.submit 'Create Task', class:"bg-yellow-300 px-3 py-2 rounded-md hover:bg-yellow-400 cursor-pointer mt-5" %>
-    
-    <% end %>
-  </div>
+    </div>
+
+</div>
+
 
 <% if @category.errors.any? %>
   <ul>
