--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -36,6 +36,7 @@
 
             <div class="flex flex-col">
               <div class="text-lg font-bold">
+                <%= check_box_tag(:done, value = false, checked = false) %>
                 <%= task.title %>
               </div>
 
@@ -44,13 +45,12 @@
               </em>
             </div>
 
-
             <div class="flex justify-between w-4/12">
               <div>
                 <%= task.deadline %>
               </div>
 
-              <div class="flex justify-between w-3/12">
+              <div class="flex justify-between items-center w-4/12">
                 <%= link_to image_tag("png/edit (1).png", class:"w-6"), edit_category_task_path(@category, task) %>
                 <%= link_to image_tag("png/delete (1).png", class:"w-6"), category_task_path(@category, task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
               </div>
