--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,27 +1,27 @@
 <%= render "shared/flash_messages" %>
 <% if @categories.count == 0 %>
 
-  <div class="flex justify-center">
-    <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
-  </div>
-
-  <div class="flex justify-center items-center text-xl space-x-3">
-    <h1>No Agendas yet.</h1>
-    <%= link_to 'Create one now!', new_category_path, class: "bg-blue-100 px-5 py-2 rounded-lg transform hover:text-black hover:scale-110 transition ease-in"%>
-  </div>
+  <section class="h-screen">
+    <div class="flex justify-center">
+      <%= image_tag("checklist-animate.svg", class:"w-1/3") %>
+    </div>
+  
+    <div class="flex justify-center items-center text-xl space-x-3">
+      <h1>No Agendas yet.</h1>
+      <%= link_to 'Create one now!', new_category_path, class: "bg-blue-100 px-5 py-2 rounded-lg transform hover:text-black hover:scale-110 transition ease-in"%>
+    </div>
+  </section>
 
 <% else %>
-  <div class="mb-32 mt-10">
   
-    <div class="flex justify-center mt-5">
-      <div class="flex flex-wrap gap-14 max-w-6xl">
+  <section class="flex justify-center mt-10 mb-32">
+    <div class="flex flex-wrap  gap-14 max-w-6xl">
+      <% @categories.each do |category| %>
+        <% category.tasks.each do |task| %>
+          <% if task.deadline == Date.today %>
 
-        <% @categories.each do |category| %>
-          <% category.tasks.each do |task| %>
-            <% if task.deadline == Date.today %>
-  
               <div class="w-84 h-48 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
-                <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= task.title %></div>
+                <div class="text-center text-2xl font-bold border-b-2 border-black"><%= task.title %></div>
                 <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
 
                 <div>
@@ -29,51 +29,49 @@
                     <div>
                       <h1 class="font-bold">URGENT TASK!</h1>
                     </div>
-      
-                    <div class="flex">
+
+                    <section class="flex">
                       <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-7 transform duration-100 hover:scale-110 transition ease-in" %>
-                    </div>
+                    </section>
                   </div>
                 </div>
-                
               </div>
-              
-            <%end%>
+
           <%end%>
         <%end%>
+      <%end%>
+    </div>
+  </section>
 
+
+  <section class="h-screen">
+    <div class="mb-20">
+      <div class="flex justify-center mt-10">
+        <h1 class="text-3xl font-bold underline">Agenda</h1>
       </div>
-    </div>
-
-  </div>
-
-
-  <div class="mb-20">
-    <div class="flex justify-center mt-10">
-      <h1 class="text-3xl font-bold underline">Agenda</h1>
-    </div>
-  
-    <div class="flex justify-center mt-5">
-      <div class="flex flex-wrap gap-14 max-w-6xl">
-  
-        <% @categories.each do |category| %>
-  
-          <div class="w-84 h-48 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
-            <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
-            <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
-            <div>
-              <div class="flex justify-end space-x-5 mt-10">
-                <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
-                <%= link_to image_tag("png/edit (1).png"), edit_category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
-                <%= link_to image_tag("png/delete (1).png"), category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+    
+      <div class="flex justify-center mt-5">
+        <div class="flex flex-wrap gap-14 max-w-6xl">
+    
+          <% @categories.each do |category| %>
+    
+            <div class="w-84 h-48 m-auto flex-col space-y-3 p-6 rounded-lg bg-gradient-to-b from-white via-blue-50 to-blue-100 eli-form-box-shadow">
+              <div class="flex justify-center text-2xl font-bold border-b-2 border-black"><%= category.title %></div>
+              <div class="text-md"><%= category.description.to_s.truncate(30) %></div>
+              <div>
+                <div class="flex justify-end space-x-5 mt-10">
+                  <%= link_to image_tag("png/open-folder-with-document.png"), category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+                  <%= link_to image_tag("png/edit (1).png"), edit_category_path(category), class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+                  <%= link_to image_tag("png/delete (1).png"), category_path(category), method: :delete, data: { confirm: "Are you sure you want to delete this agenda?" }, class:"w-6 transform duration-100 hover:scale-110 transition ease-in" %>
+                </div>
               </div>
             </div>
-          </div>
-  
-        <%end%>
-  
+    
+          <%end%>
+    
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
 <% end %>
